spacing fix

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4721,7 +4721,7 @@ input[type="button"].btn-block {
 
 .nav-link {
   display: block;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
 }
 
 .nav-link:hover,
